    working rkwarddev script calls
  - new option "ignore" enables rk.uniqueIDs() to not check nodes for
    duplicates (e.g., <copy>)
  - new wrapper function jo() for id() makes it possible to use several
    operators without quoting, it will detect and quote them for you
  - new option ".objects" in id() to provide objects as a list
changed:
  - improved error handling in rk.JS.header(), error messages are more
    informative now
  - rk.uniqueIDs() now checks "dialog" and "wizard" sections separately

changes in version 0.07-3 (2015-06-29)
fixed:
  - rk.JS.header() now produces usable level options
added:
  - new slot "opt.sep" in classes rk.JS.arr and rk.JS.opt, as well as new
    option "opt.sep" in rk.paste.JS(), rk.JS.array() and rk.JS.options(), to
    manipulate the character string separating the previous options from the ones
    defined by these objects

changes in version 0.07-2 (2015-03-14)
fixed:
  - replaced the outdated links to sourceforge with our new KDE URL

changes in version 0.07-1 (2015-03-13)
fixed:
  - rk.XML.optionset() does now allow to re-use objects defined in the same
    function call (i.e., refer to optioncolumns in the logic section)
  - removed arguments "help" and "component" from rk.XML.optionscolumn()
    again, as these are already being documented via the objects they connect to.
  - rk.build.plugin() was still only using the "--no-vignettes" option from R
    < 3
  - rk.XML.pluginmap() malformed label argument names if they referred to
    standrad maneu entries
  - rk.plugin.skeleton() still allowed invalid IDs, fixed the regexp
  - rk.XML.snippets() now also accepts <include> as child node
  - rk.XML.tabbook() returns <insert> nodes as-is, not nested in <tab></tab>
  - rk.JS.scan() now sets "state" as default modifier for checkboxes if
    guess.getter is TRUE
  - rk.XML.connect() handled modifiers too strict if "client" was a string,
    and too liberal when "governor" was