@@ -20,6 +20,7 @@ added:
   - new wrapper function jo() for id() makes it possible to use several
     operators without quoting, it will detect and quote them for you
   - new option ".objects" in id() to provide objects as a list
+  - new option "rk.JS.vars" to maje JS varaibles match the name of the original R object
 changed:
   - improved error handling in rk.JS.header(), error messages are more
     informative now
